[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/buildings/Shop.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/kenney_prototypes/assets/colors/light/textures/texture_01.png" type="Texture" id=2]
[ext_resource path="res://scenes/buildings/WeaponShop.gd" type="Script" id=3]
[ext_resource path="res://scenes/gui/weapon_list/WeaponList.tscn" type="PackedScene" id=4]

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_world_triplanar = true
albedo_color = Color( 0.95, 0, 1, 1 )
albedo_texture = ExtResource( 2 )
roughness = 0.5
uv1_scale = Vector3( 0.125, 0.125, 0.125 )
uv1_triplanar = true

[sub_resource type="QuadMesh" id=2]
size = Vector2( 2, 1 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_texture = SubResource( 3 )

[node name="WeaponShop" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="MeshInstance" parent="Root" index="0"]
material/0 = SubResource( 5 )

[node name="Area" parent="." index="2"]
collision_layer = 0
collision_mask = 2

[node name="Viewport" type="Viewport" parent="." index="4"]
size = Vector2( 234, 119 )
transparent_bg = true
debanding = true
hdr = false
usage = 0
render_target_v_flip = true

[node name="WeaponList" parent="Viewport" index="0" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_right = 170.75
margin_bottom = 83.96

[node name="WeaponList3D" type="MeshInstance" parent="." index="5"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 7, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="item_selected" from="Viewport/WeaponList" to="." method="_on_WeaponList_item_selected"]
